changed skill-catalog-service to return object instead of list of skills
